--- a/src/main/resources/homechef/search/interf1.fxml
+++ b/src/main/resources/homechef/search/interf1.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.SearchControllerInterf1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.SearchControllerInterf1">
     <children>
         <FontAwesomeIcon glyphName="SIGNAL" layoutX="290.0" layoutY="18.0" size="20" />
         <Button layoutX="267.0" layoutY="683.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="146.0" styleClass="button_bar">
@@ -24,13 +32,13 @@
                 <FontAwesomeIcon fill="#377dff" glyphName="HOME" opacity="0.5" size="20" />
             </graphic></Button>
         <Line endX="349.9999694824219" endY="13.999998092651367" layoutX="64.0" layoutY="-14.0" startX="-64.0000228881836" startY="13.999998092651367" styleClass="line" translateY="682.0" />
-        <Text fill="#243443" layoutX="-56.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textSubTitle" text="What do you need ?" translateX="170.0" translateY="-10.0" />
-        <Text layoutX="-53.0" layoutY="4.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signup" text="Insert your minimum valutation to search" translateX="80.0" translateY="150.0" wrappingWidth="357.6" />
-        <Slider fx:id="empSL" blockIncrement="1.0" layoutX="-180.0" layoutY="50.0" majorTickUnit="1.0" max="5.0" maxWidth="-Infinity" min="1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="357.0" showTickLabels="true" translateX="210.0" translateY="140.0" value="5.0" />
-        <Text layoutX="20.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textSubSubTitle" wrappingWidth="187.39027404785156" />
+        <Text fill="#243443" layoutX="-56.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textSubTitle" text="What do you need ?" translateX="170.0" translateY="-10.0" />
+        <Text layoutX="-53.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signup" text="Insert your minimum valutation to search" translateX="80.0" translateY="150.0" wrappingWidth="357.6" />
+        <Slider fx:id="empSL" blockIncrement="1.0" layoutX="-183.0" layoutY="262.0" majorTickUnit="1.0" max="5.0" maxWidth="-Infinity" min="1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="357.0" showTickLabels="true" translateX="210.0" translateY="140.0" value="5.0" />
+        <Text layoutX="20.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textSubSubTitle" wrappingWidth="187.39027404785156" />
         <Text fill="#6a94b7" layoutX="83.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-fill: #6a94b7;" styleClass="textHomePage" />
-      <Text layoutX="25.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signup" text="What do you want to eat?" wrappingWidth="235.39027404785156" />
-      <TextField fx:id="inputTraits" layoutX="20.0" layoutY="281.0" prefHeight="50.0" prefWidth="382.0" styleClass="textField" />
+      <Text layoutX="23.0" layoutY="460.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signup" text="What do you want to eat?" wrappingWidth="235.39027404785156" />
+      <TextField fx:id="inputTraits" layoutX="17.0" layoutY="480.0" prefHeight="50.0" prefWidth="382.0" styleClass="textField" />
       <Button fx:id="buttonSearch" layoutX="137.0" layoutY="548.0" mnemonicParsing="false" onAction="#search" opacity="0.0" prefHeight="86.0" prefWidth="156.0" style="-fx-font-size: 18px;" styleClass="Button">
          <graphic>
             <FontAwesomeIcon fill="WHITE" glyphName="SEARCH" size="40" text="" wrappingWidth="40.0">
@@ -53,19 +61,30 @@
          </image>
       </ImageView>
       <Text layoutX="35.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="hiperlink_signup" text="9.31" />
-      <Button layoutX="45.0" layoutY="43.0" mnemonicParsing="false" onAction="#goBack" prefHeight="30.0" prefWidth="35.0" styleClass="Back_Row">
+      <Button layoutX="45.0" layoutY="50.0" mnemonicParsing="false" onAction="#goBack" prefHeight="30.0" prefWidth="35.0" styleClass="Back_Row">
          <graphic>
             <FontAwesomeIcon fill="WHITE" glyphName="ARROW_LEFT" size="20" />
          </graphic>
       </Button>
       <FontAwesomeIcon glyphName="WIFI" layoutX="331.0" layoutY="22.0" size="20" />
-      <Slider fx:id="carefulness" blockIncrement="1.0" layoutX="140.0" layoutY="512.0" majorTickUnit="1.0" max="2.0" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="150.0" showTickLabels="true" value="1.0" />
-      <Text layoutX="183.0" layoutY="485.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 100; -fx-font-size: 15;" styleClass="param" text="Accuracy:" />
+      <Slider fx:id="carefulness" blockIncrement="1.0" layoutX="141.0" layoutY="591.0" majorTickUnit="1.0" max="2.0" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="150.0" showTickLabels="true" value="1.0" />
+      <Text layoutX="185.0" layoutY="564.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 100; -fx-font-size: 15;" styleClass="param" text="Accuracy:" />
       <Label fx:id="lb1" layoutX="275.0" layoutY="102.0" prefHeight="19.0" prefWidth="0.0" />
       <Label fx:id="lb2" layoutX="276.0" layoutY="148.0" />
       <Label fx:id="lb3" layoutX="275.0" layoutY="197.0" />
       <Label fx:id="lb4" layoutX="260.0" layoutY="471.0" prefHeight="17.0" prefWidth="13.0" />
       <ProgressBar fx:id="progressBar" layoutX="-1.0" layoutY="673.0" prefHeight="10.0" prefWidth="415.0" progress="0.0" style="-fx-accent: #377DFF; -fx-opacity: 0.7;" />
+      <Text layoutX="28.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signup" text="Insert the chef name" wrappingWidth="357.6" />
+      <TextField fx:id="inputTraits1" layoutX="17.0" layoutY="172.0" prefHeight="50.0" prefWidth="382.0" styleClass="textField" />
+      <Text layoutX="27.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textContent_signup" text="You can also search a chef based on him valuation or him best dish" wrappingWidth="357.6" />
+      <Button layoutX="360.0" layoutY="50.0" mnemonicParsing="false" onAction="#goToSettings" styleClass="Back_Row">
+         <graphic>
+            <FontAwesomeIcon fill="WHITE" glyphName="COG" size="20" />
+         </graphic>
+         <padding>
+            <Insets top="2.0" />
+         </padding>
+      </Button>
 
     </children>
 </AnchorPane>
