--- a/src/main/resources/homechef/settings/interf1.fxml
+++ b/src/main/resources/homechef/settings/interf1.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,16 +14,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.SettingsControllerInterf1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.SettingsControllerInterf1">
     <children>
-        <Button layoutX="267.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToChat" prefHeight="52.0" prefWidth="146.0" styleClass="button_bar">
-            <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="PAPER_PLANE" opacity="0.5" size="20" />
-            </graphic></Button>
-        <Button layoutX="-83.0" layoutY="-10.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar" translateX="75.0" translateY="692.0">
-            <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="SLIDERS" opacity="0.5" size="25" />
-            </graphic></Button>
+        <Button layoutX="267.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToChat" prefHeight="52.0" prefWidth="146.0" styleClass="button_bar" />
+        <Button layoutX="-83.0" layoutY="-10.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar" translateX="75.0" translateY="692.0" />
         <FontAwesomeIcon glyphName="WIFI" layoutX="331.0" layoutY="21.0" size="20" />
         <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="371.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
 
@@ -35,19 +28,9 @@
                 <Font size="36.0" />
             </font>
         </Text>
-        <Button layoutX="267.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToChat" prefHeight="52.0" prefWidth="146.0" styleClass="button_bar">
-            <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="PAPER_PLANE" opacity="0.5" size="20" />
-            </graphic>
-        </Button>
-        <Button layoutX="-83.0" layoutY="-10.0" mnemonicParsing="false" onAction="#goToPersonalForm" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar" translateX="75.0" translateY="692.0">
-            <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="SLIDERS" opacity="0.5" size="25" />
-            </graphic>
-        </Button>
         <Button layoutX="133.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToHome" prefHeight="52.0" prefWidth="142.0" styleClass="button_bar">
             <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="COG" size="55" />
+                <FontAwesomeIcon fill="#377dff" glyphName="HOME" size="55" />
             </graphic>
         </Button>
         <Line endX="349.9999694824219" endY="13.999998092651367" layoutX="64.0" layoutY="-14.0" startX="-64.0000228881836" startY="13.999998092651367" styleClass="line" translateY="682.0" />
@@ -56,15 +39,14 @@
                 <FontAwesomeIcon fill="WHITE" glyphName="ARROW_LEFT" onDragDetected="#goBack" size="20" />
             </graphic>
         </Button>
-        <FontAwesomeIcon glyphName="FLAG" layoutX="29.0" layoutY="570.0" size="20" text="" />
-        <FontAwesomeIcon glyphName="STAR" layoutX="29.0" layoutY="627.0" opacity="0.37" size="20" />
+        <FontAwesomeIcon glyphName="FLAG" layoutX="37.0" layoutY="445.0" size="20" text="" />
         <Line endX="301.5000305175781" endY="14.0" layoutX="86.0" layoutY="119.0" startX="-12.399978637695312" startY="14.0" styleClass="line" />
         <Text layoutX="60.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="hiperlink" />
         <Text layoutX="60.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="372.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
 
         </ImageView>
-        <ComboBox fx:id="comb" layoutX="70.0" layoutY="546.0" prefHeight="41.0" prefWidth="230.0" promptText="Change Language">
+        <ComboBox fx:id="comb" layoutX="68.0" layoutY="418.0" prefHeight="41.0" prefWidth="230.0" promptText="Change Language">
             <styleClass>
                 <String fx:value="search" />
                 <String fx:value="hiperlink_signup" />
@@ -73,7 +55,6 @@
         <Text layoutX="59.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" />
         <Hyperlink layoutX="70.0" layoutY="99.0" onAction="#goEditProf" styleClass="hiperlink_signup" text="Edit Profile" />
         <Hyperlink layoutX="65.0" layoutY="304.0" onAction="#setPswd" styleClass="hiperlink_signup" text="Edit Password" />
-        <Hyperlink layoutX="58.0" layoutY="605.0" opacity="0.37" style="-fx-text-fill: red;" styleClass="hiperlink_signup" text="Leave a review" />
         <Hyperlink layoutX="67.0" layoutY="152.0" onAction="#signOut" styleClass="hiperlink_signup" text="Sign Out" />
         <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="371.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -84,8 +65,6 @@
         <TextField fx:id="email" layoutX="23.0" layoutY="234.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="50.0" prefWidth="373.0" promptText="mariorossi@gmail.com" styleClass="textField" />
         <PasswordField fx:id="confirmpswd" layoutX="216.0" layoutY="337.0" maxWidth="-Infinity" prefHeight="50.0" prefWidth="182.0" promptText="confirm password" styleClass="textField" />
         <PasswordField fx:id="pswd" layoutX="22.0" layoutY="339.0" maxWidth="-Infinity" prefHeight="50.0" prefWidth="182.0" promptText="password" styleClass="textField" />
-        <Hyperlink layoutX="65.0" layoutY="410.0" onAction="#setFeed" styleClass="hiperlink_signup" text="Leave a feedback" />
-        <TextArea fx:id="feedback" layoutX="33.0" layoutY="448.0" prefHeight="83.0" prefWidth="358.0" />
         <Button layoutX="24.0" layoutY="195.0" mnemonicParsing="false" onAction="#setMail" style="-fx-background-color: transparent;">
             <graphic>
                 <FontAwesomeIcon glyphName="ENVELOPE_ALT" size="30" />
@@ -106,11 +85,7 @@
                 <FontAwesomeIcon glyphName="LOCK" size="30" />
             </graphic>
         </Button>
-        <Button layoutX="23.0" layoutY="405.0" mnemonicParsing="false" onAction="#setFeed" style="-fx-background-color: transparent;">
-            <graphic>
-                <FontAwesomeIcon glyphName="EDIT" size="30" />
-            </graphic>
-        </Button>
+        <Button layoutX="23.0" layoutY="405.0" mnemonicParsing="false" onAction="#setFeed" style="-fx-background-color: transparent;" />
         <Text layoutX="35.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="hiperlink_signup" text="9.31" />
 
     </children>
