--- a/src/main/resources/homechef/buttonBarInterf2.fxml
+++ b/src/main/resources/homechef/buttonBarInterf2.fxml
@@ -2,12 +2,12 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Circle?>
 
 <AnchorPane prefHeight="790.0" prefWidth="102.0" stylesheets="@css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ButtonBarInterf2">
    <children>
-      <Circle fill="#8290f1" layoutX="49.0" layoutY="62.0" radius="30.0" stroke="WHITE" strokeType="INSIDE" />
       <Button fx:id="chat" layoutX="16.0" layoutY="135.0" mnemonicParsing="false" onAction="#goToChat" opacity="0.5" styleClass="Label" textFill="WHITE">
          <graphic>
             <FontAwesomeIcon fill="#0059ff" glyphName="PAPER_PLANE" size="30" text="" />
@@ -29,11 +29,15 @@
             <FontAwesomeIcon fill="#377dff" glyphName="SEARCH" size="50" />
          </graphic>
       </Button>
-      <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" layoutX="34.0" layoutY="76.0" size="40" />
       <Button fx:id="home1" layoutX="12.0" layoutY="273.0" mnemonicParsing="false" onAction="#goToHome" opacity="0.5" prefHeight="44.0" prefWidth="53.0" styleClass="Label" textFill="WHITE">
          <graphic>
             <FontAwesomeIcon fill="#0059ff" glyphName="BOOK" size="40" text="" />
          </graphic>
       </Button>
+      <ImageView fitHeight="73.0" fitWidth="71.0" layoutX="18.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@signup/photo/cappello_cuoco.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
