--- a/src/main/resources/homechef/chatUser/interf1.fxml
+++ b/src/main/resources/homechef/chatUser/interf1.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ChatControllerInterf1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ChatControllerInterf1">
     <children>
         <FontAwesomeIcon glyphName="WIFI" layoutX="331.0" layoutY="22.0" size="20" />
         <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="371.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
@@ -29,21 +32,14 @@
             </graphic></Button>
         <Button layoutX="-83.0" layoutY="-10.0" mnemonicParsing="false" onAction="#goToPersonalForm" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar" translateX="75.0" translateY="692.0">
             <graphic>
-                <FontAwesomeIcon fill="#377dff" glyphName="SLIDERS" opacity="0.5" size="25" />
+                <FontAwesomeIcon fill="#377dff" glyphName="BOOK" opacity="0.5" size="25" />
             </graphic></Button>
         <Button layoutX="133.0" layoutY="683.0" mnemonicParsing="false" onAction="#goToHome" prefHeight="52.0" prefWidth="142.0" styleClass="button_bar">
             <graphic>
                 <FontAwesomeIcon fill="#377dff" glyphName="HOME" opacity="0.5" size="20" />
             </graphic></Button>
         <Line endX="349.9999694824219" endY="13.999998092651367" layoutX="64.0" layoutY="-14.0" startX="-64.0000228881836" startY="13.999998092651367" styleClass="line" translateY="682.0" />
-        <Button layoutX="321.0" layoutY="38.0" mnemonicParsing="false" onAction="#touchedHome" prefHeight="58.0" prefWidth="58.0" styleClass="Back_Row">
-            <graphic>
-                <FontAwesomeIcon fill="#fff6f6" glyphName="" size="40" text="" wrappingWidth="35.19999999999993" />
-            </graphic>
-         <padding>
-            <Insets bottom="2.0" left="5.0" />
-         </padding></Button>
-        <Text fx:id="withName" layoutX="90.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 30;" styleClass="textContent_signup" text="User #8536759" wrappingWidth="235.39027404785156" />
+        <Text fx:id="withName" layoutX="90.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 30;" styleClass="textContent_signup" text="Nome:" wrappingWidth="235.39027404785156" />
         <Button layoutX="10.0" layoutY="32.0" mnemonicParsing="false" onAction="#goBack" prefHeight="30.0" prefWidth="35.0" styleClass="Back_Row">
             <graphic>
                 <FontAwesomeIcon fill="WHITE" glyphName="ARROW_LEFT" size="15" strokeWidth="0.5" />
@@ -65,6 +61,11 @@
                 <FontAwesomeIcon glyphName="PENCIL_SQUARE_ALT" opacity="0.5" size="30" text="" wrappingWidth="30.0" />
             </graphic>
         </Button>
+      <Button layoutX="321.0" layoutY="38.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="58.0" styleClass="Back_Row">
+         <graphic>
+            <FontAwesomeIcon fill="#fff6f6" glyphName="CUTLERY" size="40" />
+         </graphic>
+      </Button>
 
 
     </children>
