--- a/src/main/resources/homechef/chatUser/interf2.fxml
+++ b/src/main/resources/homechef/chatUser/interf2.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1440.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ChatControllerInterf2">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1440.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ChatControllerInterf2">
     <children>
-      <ScrollPane hbarPolicy="NEVER" layoutX="117.0" layoutY="162.0" prefHeight="619.0" prefWidth="424.0" style="-fx-background-color: transparent;" vbarPolicy="ALWAYS">
+      <ScrollPane hbarPolicy="NEVER" layoutX="115.0" layoutY="156.0" prefHeight="619.0" prefWidth="424.0" style="-fx-background-color: transparent;" vbarPolicy="ALWAYS">
          <content>
             <AnchorPane fx:id="listUtenti" prefHeight="186.0" prefWidth="409.0" />
          </content>
@@ -35,18 +39,7 @@
                   <Font size="30.0" />
                </font>
             </TextArea>
-            <Text fx:id="withName" layoutX="214.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 50;" styleClass="textContent_signup" text="User #8536759" wrappingWidth="392.0" />
-            <Button layoutX="596.0" layoutY="7.0" mnemonicParsing="false" onAction="#touchedHome" prefHeight="74.0" prefWidth="71.0" styleClass="Back_Row">
-               <graphic>
-                  <FontAwesomeIcon fill="#fff6f6" glyphName="USER" size="50" text="" wrappingWidth="35.19999999999993" />
-               </graphic>
-               <padding>
-                  <Insets bottom="2.0" left="5.0" right="10.0" />
-               </padding>
-               <cursor>
-                  <Cursor fx:constant="DEFAULT" />
-               </cursor>
-            </Button>
+            <Text fx:id="withName" layoutX="214.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 50;" styleClass="textContent_signup" text="Nome:" wrappingWidth="392.0" />
             <Button layoutX="821.0" layoutY="631.0" minWidth="42.0" mnemonicParsing="false" onAction="#sendMsg" prefHeight="154.0" prefWidth="64.0" styleClass="button_pen">
                <graphic>
                   <FontAwesomeIcon glyphName="PENCIL_SQUARE_ALT" opacity="0.5" size="30" text="" wrappingWidth="30.0" />
@@ -57,11 +50,15 @@
                   <AnchorPane fx:id="messaggi" prefHeight="2010.0" prefWidth="794.0" style="-fx-background-color: transparent;" />
                </content>
             </ScrollPane>
+            <Button layoutX="596.0" layoutY="7.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="71.0" styleClass="Back_Row">
+               <graphic>
+                  <FontAwesomeIcon fill="#fff6f6" glyphName="CUTLERY" size="40" />
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
       <AnchorPane layoutX="3.0" layoutY="1.0" prefHeight="790.0" prefWidth="102.0" stylesheets="@../css.css">
          <children>
-            <Circle fill="#8290f1" layoutX="49.0" layoutY="62.0" radius="30.0" stroke="WHITE" strokeType="INSIDE" />
             <Button fx:id="chat" layoutX="16.0" layoutY="135.0" mnemonicParsing="false" onAction="#goToChat" styleClass="Label" textFill="WHITE">
                <graphic>
                   <FontAwesomeIcon fill="#0059ff" glyphName="PAPER_PLANE" size="30" text="" />
@@ -70,11 +67,6 @@
             <Button fx:id="home" layoutX="14.0" layoutY="207.0" mnemonicParsing="false" onAction="#goToHome" opacity="0.5" prefHeight="44.0" prefWidth="53.0" styleClass="Label" textFill="WHITE">
                <graphic>
                   <FontAwesomeIcon fill="#0059ff" glyphName="HOME" size="40" text="" />
-               </graphic>
-            </Button>
-            <Button fx:id="form" layoutX="16.0" layoutY="273.0" mnemonicParsing="false" onAction="#goToPersonalForm" opacity="0.5" prefHeight="44.0" prefWidth="53.0" styleClass="Label" textFill="WHITE">
-               <graphic>
-                  <FontAwesomeIcon fill="#0059ff" glyphName="SLIDERS" size="40" text="" />
                </graphic>
             </Button>
             <Button fx:id="settings" layoutX="17.0" layoutY="351.0" mnemonicParsing="false" onAction="#goToSettings" opacity="0.5" prefHeight="44.0" prefWidth="53.0" styleClass="Label" textFill="WHITE">
@@ -87,7 +79,16 @@
                   <FontAwesomeIcon fill="#377dff" glyphName="SEARCH" size="50" />
                </graphic>
             </Button>
-            <FontAwesomeIcon fill="#fffefe" glyphName="USERS" layoutX="28.0" layoutY="76.0" size="40" text="" wrappingWidth="28.38747485632939" />
+            <Button layoutX="15.0" layoutY="282.0" mnemonicParsing="false" opacity="0.5" prefHeight="44.0" prefWidth="53.0" styleClass="Label">
+               <graphic>
+                  <FontAwesomeIcon fill="#0059ff" glyphName="BOOK" size="40" styleClass="Label" />
+               </graphic>
+            </Button>
+            <ImageView fitHeight="73.0" fitWidth="71.0" layoutX="18.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../signup/photo/cappello_cuoco.jpg" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
     </children>
