--- a/src/main/resources/homechef/initialSearchAndChatChef/interf1.fxml
+++ b/src/main/resources/homechef/initialSearchAndChatChef/interf1.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.InitialSearchAndChatControllerInterf1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="736.0" prefWidth="414.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.InitialSearchAndChatControllerInterf1">
     <children>
         <FontAwesomeIcon glyphName="WIFI" layoutX="331.0" layoutY="22.0" size="20" />
         <ImageView fitHeight="41.0" fitWidth="32.0" layoutX="371.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
@@ -87,7 +94,7 @@
          <children>
             <Button fx:id="home1" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat1" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -110,7 +117,7 @@
          <children>
             <Button fx:id="home2" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat2" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -133,7 +140,7 @@
          <children>
             <Button fx:id="home3" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat3" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -156,7 +163,7 @@
          <children>
             <Button fx:id="home4" layoutY="8.0" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat4" layoutX="63.0" mnemonicParsing="false" onAction="#touchChat" prefHeight="75.0" prefWidth="267.0" style="-fx-background-color: transparent;">
@@ -175,5 +182,10 @@
             </Button>
          </children>
       </Group>
+      <Button layoutX="2.0" layoutY="682.0" mnemonicParsing="false" onAction="#goToPersonalForm" prefHeight="44.0" prefWidth="146.0" styleClass="button_bar">
+         <graphic>
+            <FontAwesomeIcon fill="#377dff" glyphName="BOOK" opacity="0.5" size="25" />
+         </graphic>
+      </Button>
     </children>
 </AnchorPane>
