--- a/src/main/resources/homechef/login/interf2.fxml
+++ b/src/main/resources/homechef/login/interf2.fxml
@@ -5,13 +5,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="1200.0" maxWidth="1300.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="790.0" prefWidth="1440.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.LoginControllerInterf1">
     <children>
         <Button fx:id="loginButton" layoutX="570.0" layoutY="528.0" mnemonicParsing="false" onAction="#switchToHome" prefHeight="35.0" prefWidth="300.0" style="-fx-font-size: 18px;" styleClass="Button" text="Login " textFill="#f2f2f2" />
-        <Circle fill="#8290f1" layoutX="703.0" layoutY="235.0" radius="72.0" stroke="WHITE" strokeType="INSIDE" />
         <TextField fx:id="labUser" layoutX="530.0" layoutY="335.0" prefHeight="50.0" prefWidth="370.0" promptText="User" styleClass="textField" />
         <PasswordField fx:id="labPassword" layoutX="530.0" layoutY="410.0" prefHeight="50.0" prefWidth="370.0" promptText="Password" styleClass="textField" />
         <Hyperlink layoutX="789.0" layoutY="462.0" onAction="#switchToRecoverPswd" styleClass="hiperlink" text="Forgot password?" textFill="#377dff">
@@ -45,9 +43,9 @@
             </Label>
          </content>
       </ScrollPane>
-      <ImageView fitHeight="100.0" fitWidth="99.0" layoutX="654.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="167.0" fitWidth="186.0" layoutX="608.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@photo/icona-login.png" />
+            <Image url="@../signup/photo/cappello_cuoco.jpg" />
          </image>
       </ImageView>
     </children>
