--- a/src/main/resources/homechef/resultSearch/interf2.fxml
+++ b/src/main/resources/homechef/resultSearch/interf2.fxml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import de.jensd.fx.glyphs.fontawesome.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="resultVisit" prefHeight="780.0" prefWidth="765.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ResultSearchControllerInterf2">
+<AnchorPane fx:id="resultVisit" prefHeight="780.0" prefWidth="765.0" stylesheets="@../css.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="progettoispw.letmeknow.ResultSearchControllerInterf2">
    <children>
       <Text layoutX="284.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 40;" styleClass="textSubTitle" text="Results" wrappingWidth="187.39027404785156">
          <font>
             <Font size="36.0" />
          </font>
       </Text>
-      <Button layoutX="246.0" layoutY="692.0" mnemonicParsing="false" onAction="#outputVal" opacity="0.76" prefHeight="50.0" prefWidth="306.0" style="-fx-font-size: 20;" styleClass="Button" text="Load other users" textFill="WHITE" />
+      <Button layoutX="246.0" layoutY="692.0" mnemonicParsing="false" onAction="#outputVal" opacity="0.76" prefHeight="50.0" prefWidth="306.0" style="-fx-font-size: 20;" styleClass="Button" text="Load other chef" textFill="WHITE" />
       <FontAwesomeIcon fill="WHITE" glyphName="INBOX" layoutX="492.0" layoutY="725.0" size="25" />
       <Group fx:id="group1" layoutX="56.0" layoutY="103.0">
          <children>
             <Button fx:id="home1" layoutY="10.583984375" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat1" layoutX="41.0" layoutY="46.583984375" mnemonicParsing="false" onAction="#touchChat" style="-fx-background-color: rgba(139, 178, 249, 1);" styleClass="Back_Row">
@@ -49,7 +48,7 @@
          <children>
             <Button fx:id="home2" layoutY="10.583984375" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat2" layoutX="41.0" layoutY="46.583984375" mnemonicParsing="false" onAction="#touchChat" style="-fx-background-color: rgba(139, 178, 249, 1);" styleClass="Back_Row">
@@ -78,7 +77,7 @@
          <children>
             <Button fx:id="home4" layoutY="10.583984375" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat4" layoutX="41.0" layoutY="46.583984375" mnemonicParsing="false" onAction="#touchChat" style="-fx-background-color: rgba(139, 178, 249, 1);" styleClass="Back_Row">
@@ -107,7 +106,7 @@
          <children>
             <Button fx:id="home3" layoutY="10.583984375" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat3" layoutX="41.0" layoutY="46.583984375" mnemonicParsing="false" onAction="#touchChat" style="-fx-background-color: rgba(139, 178, 249, 1);" styleClass="Back_Row">
@@ -136,7 +135,7 @@
          <children>
             <Button fx:id="home6" layoutY="10.583984375" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat6" layoutX="41.0" layoutY="46.583984375" mnemonicParsing="false" onAction="#touchChat" style="-fx-background-color: rgba(139, 178, 249, 1);" styleClass="Back_Row">
@@ -165,7 +164,7 @@
          <children>
             <Button fx:id="home5" layoutY="10.583984375" mnemonicParsing="false" onAction="#visit" prefHeight="60.0" prefWidth="60.0" styleClass="Back_Row">
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="CUTLERY" size="40" strokeWidth="0.5" wrappingWidth="29.942844480276108" />
                </graphic>
             </Button>
             <Button fx:id="chat5" layoutX="41.0" layoutY="46.583984375" mnemonicParsing="false" onAction="#touchChat" style="-fx-background-color: rgba(139, 178, 249, 1);" styleClass="Back_Row">
